--- a/src/index.css
+++ b/src/index.css
@@ -11,59 +11,100 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(238, 238, 238);
+  background-color: #131835;
 }
 
-.container {
-  min-height: 100vh;
-  display: flex;
-  gap: 36px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.background {
+  width: 430px;
+  height: 520px;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 50%;
 }
-
-.container .value {
-  font-size: 120px;
-  font-family: monospace;
-  width: 300px;
-  height: 300px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.background .shape {
+  height: 200px;
+  width: 200px;
+  position: absolute;
   border-radius: 50%;
-  border: 1px solid #888;
-  box-shadow: 2px 4px 10px #ddd;
+}
+.shape:first-child {
+  background: linear-gradient(#1845ad, #23a2f6);
+  left: -80px;
+  top: -80px;
+}
+.shape:last-child {
+  background: linear-gradient(to right, #ff512f, #f09819);
+  right: -30px;
+  bottom: -80px;
+}
+form {
+  height: 520px;
+  width: 400px;
+  background-color: rgba(255, 255, 255, 0.13);
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  border-radius: 10px;
+  backdrop-filter: blur(10px);
+  border: 2px solid rgba(255, 255, 255, 0.1);
+  box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+  padding: 50px 35px;
+}
+form * {
+  font-family: "Poppins", sans-serif;
+  color: #ffffff;
+  letter-spacing: 0.5px;
+  outline: none;
+  border: none;
+}
+form h3 {
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 42px;
+  text-align: center;
 }
 
-.btns {
-  display: flex;
-  gap: 12px;
+.error-msg {
+  color: #f44336;
+  margin-top: 12px;
+  font-size: 14px;
 }
 
-.btns button:first-of-type {
-  margin-right: 24px;
+label {
+  display: block;
+  margin-top: 30px;
+  font-size: 16px;
+  font-weight: 500;
+}
+input {
+  display: block;
+  height: 50px;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.07);
+  border-radius: 3px;
+  padding: 0 10px;
+  margin-top: 8px;
+  font-size: 14px;
+  font-weight: 300;
 }
 
+:is(button, input):focus {
+  outline: solid #00bcd4 4px;
+}
+
+::placeholder {
+  color: #b8b8b8;
+}
 button {
-  background-color: #010a39;
-  padding: 12px 24px;
-  color: white;
-  border: 0;
-  border-radius: 8px;
+  margin-top: 50px;
+  width: 100%;
+  background-color: #ffffff;
+  color: #080710;
+  padding: 15px 0;
   font-size: 18px;
-  font-weight: bold;
-  transition: all 0.1s ease-in-out;
+  font-weight: 600;
+  border-radius: 5px;
   cursor: pointer;
-  box-shadow: -5px 3px 0px 1px #020202;
-  transition: all 0.3s;
-}
-
-button:hover {
-  background-color: #051046;
-  transform: scale(1.03);
-}
-
-button:active {
-  transform: scale(0.9);
 }
