--- a/src/index.css
+++ b/src/index.css
@@ -100,6 +100,8 @@ body {
   color: white;
   text-align: center;
   padding: 164px;
+  display: flex;
+  justify-content: center;
   animation: smallBig 2s ease-in-out infinite;
 }
 
